# sudokusolver

./: .ghc.environment.x86_64-mingw32-9.2.7  README.md  countdown_game.hs  cypherc.hs  game_of_life.hs  hangman_game.hs  hof.hs  interactive_programming.hs  lottochiara.hs  nim.hs  programming_in_hs.hs  recursion.hs  testhask.hs  testhask_1.hs  testhask_3.hs  testhask_4.hs  testhask_5.hs  ttt.hs  types.hs
EHChap10IORefs/: CHANGELOG.md  EHChap10IORefs.cabal  README.md  package.yaml
EHChap7-IO/: CHANGELOG.md  EHChap7-IO.cabal  README.md  package.yaml  test.txt
EHChap8-IO/: CHANGELOG.md  EHChap8-IO.cabal  README.md  package.yaml
EHChap9Monads/: CHANGELOG.md  EHChap9Monads.cabal  README.md  package.yaml  stack.yaml
EHchap6/: CHANGELOG.md  EHchap7.cabal  README.md  package.yaml
EfectiveHaskChap3/: CHANGELOG.md  EfectiveHaskChap3.cabal  README.md  package.yaml
EffectiveHaskell/: CHANGELOG.md  EffectiveHaskel.cabal  README.md  package.yaml
EffectiveHaskellChap2/: CHANGELOG.md  EffectiveHaskellChap2.cabal  README.md  package.yaml
GameOfLife/: package.yaml  stack.yaml
MyIO/: MyIO.cabal  package.yaml  stack.yaml
MyIO/app/: Main.hs
TestingIOActions/: CHANGELOG.md  README.md  TestingIOActions.cabal  package.yaml
algoswithhask/: CHANGELOG.md  README.md  algoswithhask.cabal  package.yaml
benchmark-test/: CHANGELOG.md  benchmark-test.cabal
benchmarktest/: CHANGELOG.md  benchmarktest.cabal
benchtest/: CHANGELOG.md  benchtest.cabal  package.yaml
caesar/: caesar.cabal  package.yaml
combinatorial/: CHANGELOG.md  combinatorial.cabal  package.yaml
frequencybox/: CHANGELOG.md  README.md  frequencybox.cabal  package.yaml
gradTest/: CHANGELOG.md  README.md  gradTest.cabal  package.yaml
guessinggameio/: CHANGELOG.md  README.md  guessinggameio.cabal  package.yaml
haskelfrom1stprinciple/: CHANGELOG.md  README.md  haskelfrom1stprinciple.cabal  package.yaml
haskellInDepth/: CHANGELOG.md  README.md  haskellInDepth.cabal  package.yaml
haskfromfirstptypeclasses/: CHANGELOG.md  README.md  haskfromfirstptypeclasses.cabal  package.yaml
hffp-chap10/: CHANGELOG.md  README.md  hffp-chap10.cabal  package.yaml
hffp-types/: CHANGELOG.md  README.md  hffp-types.cabal  package.yaml
hgamesoflife/hgamesoflife/: CHANGELOG.md  README.md  hgamesoflife.cabal
hgamesoflife/hgamesoflife/.stack-work/: stack.sqlite3
hgamesoflife/hgamesoflife/.stack-work/ghci/3b3e5cfa/: cabal_macros.h
hgamesoflife/hgamesoflife/.stack-work/ghci/844c9922/: cabal_macros.h
hgamesoflife/hgamesoflife/.stack-work/install/0a85e3cd/lib/x86_64-windows-ghc-9.4.8/hgamesoflife-0.1.0.0-8qvFHclGJElujuQLIh2Ij/: Lib.hi
hgamesoflife/hgamesoflife/.stack-work/install/0a85e3cd/lib/x86_64-windows-ghc-9.4.8/hgamesoflife-0.1.0.0-DHiUahxevuJ1yMh6kOtOtZ/: Lib.hi
hgamesoflife/hgamesoflife/.stack-work/install/0a85e3cd/lib/x86_64-windows-ghc-9.4.8/hgamesoflife-0.1.0.0-DlWt6V7245vBLKRo39vv4I/: Lib.hi
hgamesoflife/hgamesoflife/.stack-work/install/0a85e3cd/pkgdb/: hgamesoflife-0.1.0.0-EiRGRRCGk8n28ee56riFB9.conf  package.cache
hgamesoflife/hgamesoflife/src/: Lib.hs  Main.hs
hgamesoflife/hgamesoflife/test/: Spec.hs
hskfrom1stppatternmatching/: CHANGELOG.md  README.md  hskfrom1stppatternmatching.cabal  package.yaml
sudokusolver/: CHANGELOG.md.save0  package.yaml  stack.yaml  sudokusolver.cabal  sudokusolver.cabal.save0
sudokusolver/app/: Main.hs
sudokusolver/bench/: Benchmark.hs
sudokusolver/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
sudokusolver/dist-newstyle/packagedb/ghc-9.2.7/: package.cache  sudokusolver-0.1.0.0-inplace.conf
sudokusolver/src/: Lib.hs  Timing.hs
sudokusolver/test/: Spec.hs  Spec.hs.new
(+245 files in other folders)
