cabal-version:       2.2

name:                hgamesoflife
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hgamesoflife#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable hgamesoflife
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Lib
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hgamesoflife
                     , containers
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

test-suite hgamesoflife-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hgamesoflife
                     , hspec >= 2.7.1
                     , containers
                     , directory
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
  default-language:    Haskell2010
